fix bg class size on mobile

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -85,10 +85,6 @@
     background-image: url(/leverage-2.webp);
 }
 
-.adventure4 {
-    background-image: url(/web3-2.webp);
-}
-
 @media (max-width: 768px) {
     .stars {
         background-image: none;
@@ -105,6 +101,18 @@
         padding: 30px 40px;
         margin-bottom: 20px;
         color: transparent !important;
+    }
+
+    .adventure1 {
+        background-image: url(/presence-3-mobile.webp);
+    }
+    
+    .adventure2 {
+        background-image: url(/experience-4-mobile.webp);
+    }
+    
+    .adventure3 {
+        background-image: url(/leverage-2-mobile.webp);
     }
 
     .contactFormContainer {
